manifests/posthog-caddy/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-posthog-metrics
  namespace: posthog
  labels:
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/instance: posthog
    app.kubernetes.io/component: metrics
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9363
      targetPort: 9363
      protocol: TCP
  selector:
    clickhouse.altinity.com/app: chop
    clickhouse.altinity.com/chi: posthog
    clickhouse.altinity.com/namespace: posthog
    clickhouse.altinity.com/ready: "yes"
